Added files and changes required for deployment

--- a/catalog/templates/gerdes.html
+++ b/catalog/templates/gerdes.html
@@ -18,8 +18,9 @@
   <br><br>It is hard to overstate the significace of Folk City to Dylan's life. It was here that he played his first professional gig on April 11, 1961. It was here that Bob Dylan's reputation was made when his September 29 concert was reviewed by the New York Times' Robert Shelton, who said of Dylan:
 
   <div class=quoteBlock id="">
-    "Among the newer promising talents deserving mention are a 20-year-old latter-day Guthrie disciple named Bob Dylan, with a curiously arresting mumbling, country-steeped manner." This positive reception helped him secure his first recording contract with CBS."</div>
-  Folk City was also where Bob Dylan played "Blowin' in the Wind" for the first time.
+    "Among the newer promising talents deserving mention are a 20-year-old latter-day Guthrie disciple named Bob Dylan, with a curiously arresting mumbling, country-steeped manner."</div>
+  This positive reception helped him secure his first recording contract with CBS.
+  <br><br>Folk City was also where Bob Dylan played "Blowin' in the Wind" for the first time.
   <div class=audioPlayer>
   <iframe src="https://open.spotify.com/embed/track/18GiV1BaXzPVYpp9rmOg0E" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
