Fix Google Maps native app

--- a/catalog/templates/agenda.html
+++ b/catalog/templates/agenda.html
@@ -19,7 +19,7 @@
  </div></a>
 
  <div class=walkingSection>
-   <a href="maps://www.google.com/maps/d/u/0/edit?hl=en&hl=en&mid=1bvpHoMRDMXRY3qMPub759v1yXmHXb2C9&ll=40.73746411793327%2C-73.99950679713265&z=16" target="_blank">
+   <a href="comgooglemaps://www.google.com/maps/d/u/0/edit?hl=en&hl=en&mid=1bvpHoMRDMXRY3qMPub759v1yXmHXb2C9&ll=40.73746411793327%2C-73.99950679713265&z=16" target="_blank">
    <div class=mapButton>
      <div class="showMapText boldText brownText">Show map</div>
      <div class="showMapIcon">
