updated HTML text

--- a/catalog/templates/hotelchelsea.html
+++ b/catalog/templates/hotelchelsea.html
@@ -8,7 +8,7 @@
     <div class="contentTitle whiteText villageHeader">Hotel Chelsea</div>
   </div>
   <div class=textBlock>
-    The Hotel Chelsea is a legendary hotel and commune that has been the home to numerous luminaries including Jackson Pollock, Dylan Thomas, Arthur Miller, Bob Dylan, Andy Warhol, Edie Sedgewick, Robert Mapplethorpe, Patti Smith, and Sid Vicious. <br><br>
+    The Hotel Chelsea is a legendary apartment building and hotel that was a famous home to numerous luminaries in the 50s and 60s including Jackson Pollock, Dylan Thomas, Arthur Miller, Bob Dylan, Andy Warhol, Edie Sedgewick, Robert Mapplethorpe, Patti Smith, and Sid Vicious. <br><br>
 
     <div class="brownText boldText headerPadding">Socialist beginnings</div>
     The Chelsea was opened in 1884 originally as a socialist utopian commune by archtiect Philip Hubert, who was inspired by French philsopher, Charles Fourier's vision for self-contained settlements that would meet every professional and personal need of its inhabitants.<br>
@@ -19,12 +19,13 @@
     <br><br>Though initially popular, Hubert's grand experiment went bankrupt in 1905, after which the Chelsea was converted to a luxury hotel and began to cement its place in history.
     <br><br>
     <div class="brownText boldText headerPadding">A cultural institution</div>
-    The transformation of the Hotel Chelsea into a cultural landmark began just after WWII, at which point the hotel had fallen into relative disrepair.
+    But the transformation of the Hotel Chelsea into a cultural landmark didn't really begin until just after WWII, at which point the hotel had fallen into relative disrepair.
     <div class=imgBlock id="bardIMG"></div>
-    Management of the hotel was assumed by Stanley Bard, a son of one of the original hotel investors. Bard took an unorthodox approach to hotel management, and made himself solely responsble for determining who could stay at the Hotel Chelsea, and how much they paid.
-    <br><br>Bard's willingness to let artists stay for free, and pay for rent with paintings, as well as turn a blind eye to their more eccentric behaviours, enabled him to become what has been described as the curator of the world's greatest 'living museum'.
+    Around this time, management of the hotel was given to Stanley Bard, a son of one of the original hotel investors. Bard was the one responsible for turning 'the Chelsea' into what has been described as the world's greatest living museum.
+    <br><br>Bard did this by taking an unorthodox approach to hotel management. He alone was responsble for determining who could stay at the Hotel Chelsea, and how much they paid.
+    <br><br>Famously, he let artists stay for free, and pay for rent with paintings, as well as turn a blind eye to their more eccentric behaviours.
     <div class=imgBlock id="residentsIMG"></div>
-    The Chelsea became famous for its incredible cross-pollination of artists, and socialites, writers, actors and models. The halls were roamed at one time or another by some of the most important artistic talents of their generation: Bob Dylan, Andy Warhol, Janis Joplin, Leonard Cohen, Arthur Miller, Jackson Pollock, Dylan Thomas, and Patti Smith.
+    As a result, the Chelsea became famous for its incredible cross-pollination of artists, and socialites, writers, actors and models. The halls were roamed at one time or another by some of the most important artistic talents of their generation: Bob Dylan, Andy Warhol, Janis Joplin, Leonard Cohen, Arthur Miller, Jackson Pollock, Dylan Thomas, and Patti Smith.
     <br><br>As one resident described it:
     <div class=quoteBlock id="">
     "It was a vibrant, dynamic place to be, particularly as a young person. You could go to one floor and talk about the theater with Stefan Brecht and go to another floor and talk to Arnold Weinstein about poetry and then have dinner downstairs with Arthur Miller. There aren’t many buildings in New York like that."</div>
