--- a/catalog/templates/baseTemplate.html
+++ b/catalog/templates/baseTemplate.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-139434385-1');
   </script>
 
-<title>
+<title>Bob Dylan Village Walking Tour | 
 {% block browserTitle %}
 
 {% endblock %}
