--- a/catalog/templates/jones.html
+++ b/catalog/templates/jones.html
@@ -1,5 +1,9 @@
 {% extends "baseTemplate.html" %}
 
+{% block browserTitle %}
+Freewheelin Bob Dylan
+{% endblock %}
+
 {% block content1 %}
 {% load static %}
 <div id=overallContainer class=standardShadow>
