--- a/catalog/templates/washingtonsqpark.html
+++ b/catalog/templates/washingtonsqpark.html
@@ -1,5 +1,9 @@
 {% extends "baseTemplate.html" %}
 
+{% block browserTitle %}
+Washington Square Park
+{% endblock %}
+
 {% block content1 %}
 {% load static %}
 <div id=overallContainer class=standardShadow>
