Add meta description for SEO

--- a/catalog/templates/baseTemplate.html
+++ b/catalog/templates/baseTemplate.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-139434385-1');
   </script>
 
-<title>Bob Dylan Village Walking Tour | 
+<title>Bob Dylan Village Walking Tour |
 {% block browserTitle %}
 
 {% endblock %}
@@ -24,6 +24,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Discover the Bob Dylan's Greenwich Village with this free walking tour">
 
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
